--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     color: #fff;
 }
 
-div.css-1ht1j8u e16fv1kl3 {
+div.css-1ht1j8u e16fv1kl3 > div {
     background-color: #EEEEEE;
     border: 1px solid #DCDCDC;
     padding: 20px 20px 20px 70px;
