--- a/style.css
+++ b/style.css
@@ -10,12 +10,12 @@ div.css-1ht1j8u e16fv1kl3 > div {
     border-radius: 10px;
 }
 
-div.row-widget.stSlider > div {
+div.stSlider > div {
     flex-direction: row;
     align-items: stretch;
 }
 
-div.row-widget.stSlider > div[role="stSlider"] > label[data-baseweb="slider"] > div:first-child {
+div.stSlider > label[data-baseweb="slider"] > div[role="slider"] > div:first-child {
     background-color: #02ab21;
 }
 
