--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ div.stSlider > div {
     align-items: stretch;
 }
 
-div.stSlider > label[data-baseweb="slider"] > div[role="slider"] > div:first-child {
+div.stSlider > label[data-baseweb="slider"] > div[class="st-cp st-cg st-cf st-bp st-b4 st-bl"] > div[class="st-av st-aw st-ax st-ay st-cq st-cr st-b7 st-cs st-ct"] > div[role="slider"] {
     background-color: #02ab21;
 }
 
