--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     color: #fff;
 } */
 
-div.css-1ht1j8u e16fv1kl3 > div {
+div.css-1h99123 e1tzin5v0 > div {
     background-color: #EEEEEE;
     border: 1px solid #DCDCDC;
     padding: 20px 20px 20px 70px;
@@ -15,7 +15,7 @@ div.stSlider > div {
     align-items: stretch;
 }
 
-div.stSlider > label[data-baseweb="slider"] > div[class="st-cp st-cg st-cf st-bp st-b4 st-bl"] > div[class="st-av st-aw st-ax st-ay st-cq st-cr st-b7 st-cs st-ct"] > div:first-child {
+div.stSlider > label[data-baseweb="slider"] > div[class="st-cp st-cg st-cf st-bp st-b4 st-bl"] > div[class="st-av st-aw st-ax st-ay st-cq st-cr st-b7 st-cs st-ct"] {
     background-color: #02ab21;
 }
 
