--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     color: #fff;
 } */
 
-div.css-1h99123 e1tzin5v0 > div {
+div.css-1r6slb0 e1tzin5v2 > div {
     background-color: #EEEEEE;
     border: 1px solid #DCDCDC;
     padding: 20px 20px 20px 70px;
@@ -10,10 +10,10 @@ div.css-1h99123 e1tzin5v0 > div {
     border-radius: 10px;
 }
 
-div.stSlider > div {
+/* div.stSlider > div {
     flex-direction: row;
     align-items: stretch;
-}
+} */
 
 div.stSlider > label[data-baseweb="slider"] > div[class="st-cp st-cg st-cf st-bp st-b4 st-bl"] > div[class="st-av st-aw st-ax st-ay st-cq st-cr st-b7 st-cs st-ct"] {
     background-color: #02ab21;
