--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     color: #fff;
 } */
 
-div.css-1r6slb0 e1tzin5v2 {
+div.css-ocqkz7 e1tzin5v4 > div.css-1r6slb0 e1tzin5v2 {
     background-color: #EEEEEE;
     border: 1px solid #DCDCDC;
     padding: 20px 20px 20px 70px;
