--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     color: #fff;
 } */
 
-div.css-ocqkz7 e1tzin5v4 > div.css-1r6slb0 e1tzin5v2 {
+div.css-ocqkz7 e1tzin5v4 > div[class="css-1r6slb0 e1tzin5v2"] {
     background-color: #EEEEEE;
     border: 1px solid #DCDCDC;
     padding: 20px 20px 20px 70px;
@@ -15,7 +15,7 @@ div.css-ocqkz7 e1tzin5v4 > div.css-1r6slb0 e1tzin5v2 {
     align-items: stretch;
 } */
 
-div.stSlider > label[data-baseweb="slider"] > div[class="st-cp st-cg st-cf st-bp st-b4 st-bl"] > div[class="st-av st-aw st-ax st-ay st-cq st-cr st-b7 st-cs st-ct"] > div {
+div.stSlider > label[data-baseweb="slider"] > div[class="st-cp st-cg st-cf st-bp st-b4 st-bl"] > div:first-child {
     background-color: #02ab21;
 }
 
