--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     color: #fff;
 } */
 
-div[class="css-ocqkz7 e1tzin5v4"] > div[class="css-ocqkz7 e1tzin5v4"] {
+div[class="css-19s0g4l e1tzin5v0"] > div[class="css-ocqkz7 e1tzin5v4"] {
     background-color: #EEEEEE;
     border: 1px solid #DCDCDC;
     padding: 20px 20px 20px 70px;
