--- a/style.css
+++ b/style.css
@@ -14,10 +14,12 @@ div[class="css-19s0g4l e1tzin5v0"] > div[class="css-ocqkz7 e1tzin5v4"] {
     flex-direction: row;
     align-items: stretch;
 } */
-
-div.stSlider > label[data-baseweb="slider"] > div:first-child {
-    background-color: #02ab21;
+div[class="css-19s0g4l e1tzin5v0"] > div[class="css-19s0g4l e1tzin5v0"] {
+        background-color: #02ab21;
 }
+/* div.stSlider > label[data-baseweb="slider"] > div:first-child {
+    background-color: #02ab21;
+} */
 
 /* div.element-container css-lhdboo e1tzin5v3 > div {
     background-color: #02ab21;
