--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 div[class="css-19s0g4l e1tzin5v0"] > div[class="css-ocqkz7 e1tzin5v4"] {
     background-color: #EEEEEE;
     border: 1px solid #DCDCDC;
-    padding: 20px 20px 20px 70px;
-    padding: 5% 5% 5% 10%;
+/*     padding: 20px 20px 20px 70px; */
+/*     padding: 5% 5% 5% 10%; */
     border-radius: 10px;
 }
 
@@ -14,8 +14,9 @@ div[class="css-19s0g4l e1tzin5v0"] > div[class="css-ocqkz7 e1tzin5v4"] {
     flex-direction: row;
     align-items: stretch;
 } */
-div[class="css-19s0g4l e1tzin5v0"] > div[class="css-19s0g4l e1tzin5v0"] {
-        background-color: #02ab21;
+div[class="css-19s0g4l e1tzin5v0"] > div[class="css-19s0g4l e1tzin5v0"] > label[data-baseweb="slider"] {
+    background-color: #02ab21;
+    color: #02ab21;
 }
 /* div.stSlider > label[data-baseweb="slider"] > div:first-child {
     background-color: #02ab21;
