--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 div[class="css-19s0g4l e1tzin5v0"] > div[class="css-ocqkz7 e1tzin5v4"] {
     background-color: #EEEEEE;
     border: 1px solid #DCDCDC;
-    padding: 150px 150px 150px 525px;
-    padding: 15% 15% 15% 30%;
+    padding: 150pd 150pd 150pd 525pd;
+    padding: 5% 5% 5% 10%;
     border-radius: 20px;
 }
 
