--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ div[class="css-19s0g4l e1tzin5v0"] > div[class="css-ocqkz7 e1tzin5v4"] {
     background-color: #EEEEEE;
     border: 1px solid #DCDCDC;
     padding: 30px 30px 30px 30px;
-    padding: 5% 5% 5% 5%;
+/*     padding: 5% 5% 5% 5%; */
     border-radius: 20px;
 }
 
