--- a/style.css
+++ b/style.css
@@ -16,6 +16,13 @@ footer:after {
     top: 2px;
 }
 
+body {
+  background-color: lightgoldenrodyellow;
+}
+
+div[data-testid="stHorizontalBlock"] > div:first-of-type {
+  background-color: #F4EBC5;
+}
 
 /* div[class="css-19s0g4l e1tzin5v0"] > div[class="css-ocqkz7 e1tzin5v4"] {
     background-color: #EEEEEE;
