--- a/style.css
+++ b/style.css
@@ -16,6 +16,19 @@ footer:after {
     top: 2px;
 }
 
+a:link, a:visited {
+  background-color: #f44336;
+  color: white;
+  padding: 15px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+a:hover, a:active {
+  background-color: red;
+}
+
 /* body {
   background-color: lightgoldenrodyellow;
 } */
