--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ footer:after {
     top: 2px;
 }
 
-a:link, a:visited {
+/* a:link, a:visited {
   background-color: #f44336;
   color: white;
   padding: 15px 25px;
@@ -27,7 +27,7 @@ a:link, a:visited {
 
 a:hover, a:active {
   background-color: red;
-}
+} */
 
 /* body {
   background-color: lightgoldenrodyellow;
