--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ footer:after {
     top: 2px;
 }
 
-a[target="_blank"] {
+a {
   background-color: #f44336;
   color: white;
   padding: 15px 25px;
