--- a/style.css
+++ b/style.css
@@ -16,14 +16,14 @@ footer:after {
     top: 2px;
 }
 
-a {
+/* a {
   background-color: #f44336;
   color: white;
   padding: 15px 25px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-}
+} */
 
 /* a:hover, a:active {
   background-color: #FF4B4B;
