--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ footer:after {
 
 .download {
   background-color: #F0F2F6;
-  color: #FFFFFF;
+  color: #000000;
   padding: 15px 25px;
   text-align: center;
   text-decoration: none;
